# relation-map-tool

./: .replit  main.py  pyproject.toml  replit.nix  requirements.txt  test_font.py
static/: last_info.txt  style.css  unzip_fonts.py
templates/: index.html  login.html  pdf_template.html
