[tool.poetry]
name = "diagnosis-app"
version = "0.1.0"
description = "タイプ診断アプリ"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^2.2.0"
matplotlib = "^3.9.3"
weasyprint = "^65.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
numpy = "^2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
